--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                   <div class="rd-navbar-project-header">
                     <h5 class="rd-navbar-project-title">Gallery</h5>
                     <div class="rd-navbar-project-hamburger rd-navbar-project-hamburger-close" data-multitoggle=".rd-navbar-inner" data-multitoggle-blur=".rd-navbar-wrap" data-multitoggle-isolate="data-multitoggle-isolate">
+                      <a class="button button-lg button-primary button-winona button-shadow-2" href="https://wa.me/6281283585142" target="_blank">PESAN</a>
                       <div class="project-close"><span></span><span></span></div>
                     </div>
                   </div>
